# sql-server-diagnostic-toolkit

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docker/: docker-compose.yml  seed.sql
examples/: generate.py  report.html  report.json  report.md
src/sqlserver_diagnostic/: classifier.py  cli.py  connection.py  findings.py  report.py  scanner.py  severity.py
src/sqlserver_diagnostic/sql/: backup_status.sql  current_blocking.sql  database_sizes.sql  index_fragmentation.sql  memory_pressure.sql  missing_indexes.sql  plan_warnings.sql  sessions.sql  tempdb_contention.sql  top_slow_queries.sql  unused_indexes.sql  vlf_counts.sql  wait_stats.sql
src/sqlserver_diagnostic/templates/: report.html.j2
tests/: fixtures.py  test_classifier.py  test_report.py
