[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sqlserver-diagnostic"
version = "0.1.0"
description = "Read-only SQL Server health and performance scanner. DMV probes, classified findings, HTML/Markdown/JSON reports."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Andrii Shvaider", email = "shvaider.andrii@gmail.com" }]
keywords = ["sqlserver", "mssql", "dba", "diagnostics", "performance", "dmv"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "Topic :: Database",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pyodbc>=5.0",
    "click>=8.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
sqlserver-diagnostic = "sqlserver_diagnostic.cli:main"

[project.urls]
Homepage = "https://github.com/AShvaider/sql-server-diagnostic-toolkit"
Issues   = "https://github.com/AShvaider/sql-server-diagnostic-toolkit/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# Ship SQL probes and the HTML template inside the wheel.
"sqlserver_diagnostic" = ["sql/*.sql", "templates/*.j2"]
